# deadbeef-filebrowser-reborn

./: README.md  meson.build  quick-install.sh  quick-remove.sh
.github/workflows/: build.yml  draft.yml
include/: filebrowser.hpp  iconutils.hpp  plugin.hpp  utils.hpp
include/cache/: cache.hpp  utils.hpp
include/cache/covers/: cover.hpp  coverfactory.hpp  utils.hpp
include/cache/covers/implementation/: coverfirst.hpp  metadatafirst.hpp  metadataonly.hpp
include/cache/treemodel/: serializer.hpp
include/gui/: addressbox.hpp  container.hpp  dispatcherbridge.hpp  fbtreefilter.hpp  fbtreemodel.hpp  fbtreepopup.hpp  filebrowserfilter.hpp  filebrowsermodel.hpp  gui.hpp  modelcolumns.hpp  searchbar.hpp  treefilebrowser.hpp  treepopup.hpp
include/gui/views/: fbtreeview.hpp  treeview.hpp
include/metadata/: reader.hpp  readerfactory.hpp
include/metadata/abstract/: id3v2reader.hpp
include/metadata/implementation/: flacreader.hpp  mp3reader.hpp  oggreader.hpp  wavreader.hpp
include/plugin/: controller.hpp  settings.hpp
src/: filebrowser.cpp  iconutils.cpp  meson.build  plugin.cpp  utils.cpp
src/cache/: utils.cpp
src/cache/covers/: cover.cpp  coverfactory.cpp  utils.cpp
src/cache/covers/implementation/: coverfirst.cpp  metadatafirst.cpp  metadataonly.cpp
src/cache/treemodel/: modelserialization.cpp  serializer.cpp
src/gui/: addressbox.cpp  container.cpp  dispatcherbridge.cpp  fbtreefilter.cpp  fbtreemodel.cpp  fbtreepopup.cpp  filebrowserfilter.cpp  filebrowsermodel.cpp  modelcolumns.cpp  modelserializer.cpp  searchbar.cpp  treefilebrowser.cpp  treepopup.cpp
src/gui/views/: fbtreeview.cpp  treeview.cpp
src/metadata/: reader.cpp  readerfactory.cpp
src/metadata/abstract/: id3v2reader.cpp
src/metadata/implementation/: flacreader.cpp  mp3reader.cpp  oggreader.cpp  wavreader.cpp
src/plugin/: controller.cpp  settings.cpp
